Changelog 0.3.73 [20230519]:
- New embed domain for gogoanime
- Updated Instructions
- Fix Sorting Settings
- Improved Skip Outro

Changelog 0.3.72 [20230515]:
- Added Manual Override Future Settings 
- Added Self Hosting Api Settings
- Added instructions
- Fix crash on zoro subtitle handling

Changelog 0.3.71 [20230513]:
- Fix mp4upload embed extractor

Changelog 0.3.70 [20230508]:
- Added playtaku embed extractor

Changelog 0.3.69 [20230507]:
- Handle season and episode as integers

Changelog 0.3.68 [20230427]:
- Handled Consumet error
- Added New Context menu "mark as completed"

Changelog 0.3.67 [20230420]:
- Fix regression error from last commit disabling subs on zoro streams

Changelog 0.3.66 [20230418]:
- Fixed Subtitle Bugs

Changelog 0.3.65 [20230414]:
- Handle animix dub stream site being down

Changelog 0.3.64 [20230412]:
- Added New Setting "Set Streaming Site"

Changelog 0.3.63 [20230410]:
- Consumet: Remove cached request before retrying

Changelog 0.3.62 [20230407]:
- Improved Priority Settings
- Allow MultiSelect Priority Settings

Changelog 0.3.61 [20230407]:
- Fixed Ratelimiting
- Fixed Zoro
- Improved Gogohd
- Update gogo url 
- Added quality for 9anime embeds
- Updated gogoembed extractor

Changelog 0.3.60 [20230405]:
- Improved 2 Priority Settings

Changelog 0.3.59 [20230403]:
- Added New Setting "Prioritize By Season"
- Added New Setting "Prioritize By Part"
- Added Enime fallback

Changelog 0.3.58 [20230402]:
- Added New Setting "Set Items Per Page"

Changelog 0.3.57 [20230318]:
- Added New Setting "Prioritize Dual-Audio Sources"
- Added New Setting "Prioritize Multisubs Sources"
- Added New Setting "Prioritize Batch Sources"

Changelog 0.3.56 [20230318]:
- Fixed Small Bug with Skip Intro Duration
- Moved two settings

Changelog 0.3.55 [20230317]:
- Small Fixes with Playback

Changelog 0.3.54 [20230316]:
- Added New Setting "Enable Automatic Outro Skip"
- Added New Setting "Enable Automatic Intro Skip"
- Recoded Skip Intro
